--- a/templates/game.html
+++ b/templates/game.html
@@ -1,19 +1,78 @@
-<h1>gametest!</h1>
 
 
 <div class="">
     <h1>Jeopardy!!!</h1>
-    <button ng-click="NewQuestion()" type="button" name="button">New Question</button>
-    <h2>Category: {{ questiongroup.category }}</h2>
+    <div class="question-box">
+    <h2> {{ catOne.category.title }}Politics </h2>
+    <ol>
+      <li ng-repeat="info in catOne">
+        <p>
+           Value: {{ info.value }}
+        </p>
+        <button ng-click = "" type="button" name="button">select</button>
+      </li>
+    </ol>
+    </div>
+    <div class="question-box">
+    <h2>Category Two </h2>
+    <ol>
+      <li ng-repeat="info in catTwo">
+        <p>
+           Value: {{ info.value }}
+        </p>
+        <button ng-click = "" type="button" name="button">select</button>
+      </li>
+    </ol>
+    </div>
+    <div class="question-box">
+    <h2>Category Three</h2>
+    <ol>
+      <li ng-repeat="info in catThree">
+        <p>
+           Value: {{ info.value }}
+        </p>
+        <button ng-click = "" type="button" name="button">select</button>
+      </li>
+    </ol>
+    </div>
+    <div class="question-box">
+    <h2>Category One:</h2>
+    <ol>
+      <li ng-repeat="info in catFour">
+        <p>
+           Value: {{ info.value }}
+        </p>
+        <button ng-click = "" type="button" name="button">select</button>
+      </li>
+    </ol>
+    </div>
+    <div class="question-box">
+    <h2>Category One:</h2>
+    <ol>
+      <li ng-repeat="info in catFive">
+        <p>
+           Value: {{ info.value }}
+        </p>
+        <button ng-click = "" type="button" name="button">select</button>
+      </li>
+    </ol>
+    </div>
     <h2>Question: {{ questiongroup.question }}</h2>
-    <h4>Point Value: {{ questiongroup.value }}</h4>
+    <!-- <h4>Point Value: {{ questiongroup.value }}</h4>
     <input ng-model="playerAnswer" type="text" name="name" value="">
-    <button ng-click="AnswerCheck()" type="button" name="button">What(who,where,when) is...</button>
+    <button ng-click="AnswerCheck()" type="button" name="button">What(who,where,when) is...</button> -->
 
-    <h2>Answer:  {{ previousquestion.answer }} </h2>
+    <!-- <h2>Answer:  {{ previousquestion.answer }} </h2>
     <h3>Score: {{ questiongroup.score }} </h3>
-    <h3>Previous Questions</h3>
+    <h3>Previous Questions</h3> -->
+    <h1>Players</h1>
     <ul>
-        <li ng-repeat="thing in previousquestion"> Value: {{thing.value}} Question: {{ thing.question }} </li>
+        <li ng-repeat="thing in players">
+            <p>
+                Name: {{thing.name}} Score: {{ thing.score }}
+            </p>
+            <input type="text" name="name" value="">
+            <button ng-model="playerAnswer" type="button" name="button">Answer</button>
+        </li>
     </ul>
 </div>
